Fix a small text alignment bug in the footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,4 +5,8 @@
     justify-content: space-between;
   }
 
+  .footer {
+    text-align: left;
+  }
+
 }
